--- a/src/style.scss
+++ b/src/style.scss
@@ -12,39 +12,39 @@ body {
     margin: 0 auto;
 }
 
-.Header {
-    padding: 20px;
-    font-size: 18px;
-    color: white;
-    background-color: #f95a61;
-    margin-bottom: 50px;
-    display: flex;
-    flex-flow: row wrap;
-    list-style: none;
-}
+// .Header {
+//     padding: 20px;
+//     font-size: 18px;
+//     color: white;
+//     background-color: #f95a61;
+//     margin-bottom: 50px;
+//     display: flex;
+//     flex-flow: row wrap;
+//     list-style: none;
+// }
 
-.Header li {
-    padding: 0 12px;
-}
+// .Header li {
+//     padding: 0 12px;
+// }
 
-.Header a {
-    color: white;
-}
+// .Header a {
+//     color: white;
+// }
 
-.Logo {
-    font-weight: 700;
-}
+// .Logo {
+//     font-weight: 700;
+// }
 
-.FeedItem {
-    background: white;
-    border: 1px solid #e6e6e6;
-    border-radius: 3px;
-    margin-bottom: 15px;
-}
+//  .FeedItem {
+//     background: white;
+//     border: 1px solid #e6e6e6;
+//     border-radius: 3px;
+//     margin-bottom: 15px;
+// } 
 
-.Image {
-    width: 100%;
-}
+// .Image {
+//     width: 100%;
+// }
 
 .ImageUploaderForm {
     display: flex;
