--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,14 +2,14 @@
     padding: 20px;
     font-size: 18px;
     color: white;
-    background-color: #8cf95a;
+    background-color: #f95a61;
     margin-bottom: 50px;
     display: flex;
     flex-flow: row wrap;
     list-style: none;
 
     a {
-        color: orange;
+        color: white;
     }
 
     li {
