--- a/src/style.scss
+++ b/src/style.scss
@@ -46,38 +46,38 @@ body {
 //     width: 100%;
 // }
 
-.ImageUploaderForm {
-    display: flex;
-    padding-bottom: 20px;
-}
+// .ImageUploaderForm {
+//     display: flex;
+//     padding-bottom: 20px;
+// }
 
-.ImageUploaderForm input {
-    flex-grow: 1;
-    padding: 10px;
-}
+// .ImageUploaderForm input {
+//     flex-grow: 1;
+//     padding: 10px;
+// }
 
-.ImageUploaderForm button {
-    background: #d8ae64;
-    border: none;
-    color: white;
-}
+// .ImageUploaderForm button {
+//     background: #d8ae64;
+//     border: none;
+//     color: white;
+// }
 
-.Likes {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 20px;
-}
+// .Likes {
+//     display: flex;
+//     flex-flow: row wrap;
+//     padding: 20px;
+// }
 
-.Likes span {
-    flex: 1;
-}
+// .Likes span {
+//     flex: 1;
+// }
 
-.LikesButton {
-    text-align: right;
-    background: #d8ae64;
-    border: none;
-    color: white;
-}
+// .LikesButton {
+//     text-align: right;
+//     background: #d8ae64;
+//     border: none;
+//     color: white;
+// }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
